deployment/aks/examples/ingress-controller/without-cors/Test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one  
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: netcoremicroservicesacr.azurecr.io/webmvc:445
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one 
  namespace: ingress-basic 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
